--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,18 @@
-.todo {
-  font-family: Tahoma;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&display=swap');
 
+.body {
+  font-family: Fira Sans, sans-serif;
+  background-color: #f8f8f8;
 }
+
 .topo {
-  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
 .subtopo {
-  font: Tahoma;
   display: flex;
-  background-color: #fdfdfd;
   justify-content: center;
   margin: 1px;
   border: 100px;
@@ -20,36 +21,36 @@
 @media (min-width: 1024px) {
 
   .container {
-    background-color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-
+   padding: 10px;
+   display: flex;
+   justify-content: center;
+   flex-direction: row;
   }
 }
-.esquerda {
-  width: 600px;
+
+.esquerda,
+.direita {
+  width: 100%;
   height: 550px;
-  background: #ffffff;
   display: flex;
   border-radius: 5px 5px;
   padding: 7px;
+  font-family: Fira Sans, sans-serif;
 
 }
+
 .center {
   display: flex;
   align-items: center;
   margin: 20px;
   border-radius: 30px 20px 40px;
+  flex-direction: column;
+  gap: 1em;
+  justify-content: center;
 
 }
-.direita {
-  width: 600px;
-  height: 550px;
-  background: #ffffff;
-  display: flex;
-  border-radius: 5px 5px;
-  padding: 7px;
+
+textarea {
+  width: 100%;
 
 }
